Home & about Merged

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,4 @@
-/*styles for top section Taken*/
+/*styles for top section */
 .font-size-numbers{
     font-size: 70px;
 }
@@ -7,7 +7,7 @@
     margin-top: -20px;
 }
 
-/*styles for vision mission section taken*/
+/*styles for vision mission section */
 .text-heading{
     font-size: 30px;
 }
